# parse-exposition

./: .gitignore  README.md  export2pdf.sh  output.txt  parse-exposition.cabal
.stack-work/ghci/1c5fe4a3/: cabal_macros.h
.stack-work/ghci/588b2e66/: cabal_macros.h
.stack-work/ghci/6463771e/: cabal_macros.h
.stack-work/ghci/6d470503/: cabal_macros.h
.stack-work/ghci/774495ec/: cabal_macros.h
.stack-work/ghci/7fc33f82/: cabal_macros.h
.stack-work/ghci/d177d37b/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/lts-13.9/8.6.3/flag-cache/: aeson-1.4.2.0-Dzbo5wshHlhHZyJApR1zxe  aeson-pretty-0.8.7-94zqWByJns0G5C5CisCuf9  asn1-encoding-0.9.5-23UYxahU2Z1BOBxoBRNCWn  asn1-parse-0.9.4-BScyGuv2BYO6loqa6EtF7v  asn1-types-0.3.2-maKO7uGsBm1nq31PERdQ5  async-2.2.1-4fWSSJ8SFccIxQJVItkRnX  attoparsec-0.13.2.2-AIDYee9KPGPHGyIUYFLj8F  base-compat-0.10.5-FRXoAxOVtbG2qLNIZm1tTr  basement-0.0.10-2z2JaOuy7fVLQL3Bi1dEbr  blaze-builder-0.4.1.0-KrFxFv3kgua3BTNMsMBadC  blaze-html-0.9.1.1-E0enfQtU1ZTDNQ8G8pIpJp  blaze-markup-0.8.2.2-IwLwNWRUxfsEuYbkQ0Gv5Q  byteable-0.1.1-9guyEXUUK503mzSnI32g2S  case-insensitive-1.2.0.11-GGYU9CY9cs88wywgwHVKC6  cereal-0.5.8.0-6rtfJLvNbgP66iuaPkuxJC  cmdargs-0.10.20-KnMRhhOf69yJ0lEhVGselp  conduit-1.3.1-4qZs7FK1n5y25aR2YQ0Bdv  conduit-extra-1.3.1-CNvEedIHR1V63vbQZ4KYWc  connection-0.2.8-ADVoPH9iKwY15D4A7yMIXW  cookie-0.4.4-KpjAlIew5oQDgqXiPeQJ63  cryptonite-0.25-Be17rxzMG7ZGaBFOmZG5Ys  data-default-class-0.1.2.0-FeIQ5tLoVZBHMSgrT9zptQ  dlist-0.8.0.5-FMMQwM1hD2kK7b7715Z2vG  exceptions-0.10.0-7rupAzx2MQN9ks4RM1dl12  hashable-1.2.7.0-CWI8VZuQTAYWIQTQQtqCV  hourglass-0.2.12-333qxqQQ3eK9Jo0nKcpgW5  html-conduit-1.3.2-Kv08ZiXLTro1EVOQtZiaEU  http-client-0.5.14-FRrWRI3YfFs9F4pGTbLVcl  http-client-tls-0.3.5.3-H7GxqzenjHk4Qg1rV1wft8  http-conduit-2.3.5-8uJVbUTFQDUBl6xjWISN2Q  http-types-0.12.2-3GI9ZSQctllDxYJpnDXS0X  integer-logarithms-1.0.2.2-IT1M1moCo0mIobW8LfdrSC  memory-0.14.18-KyYdFaXxUmW9l7sgRN1wes  mime-types-0.1.0.9-IuKFWuzgmF26e9nOlDWqrD  mono-traversable-1.0.11.0-Adxv2uUM29P72moJC0AtiC  network-2.8.0.0-AkCJm1aNSYz7ekXKYyI0pF  parse-exposition-0.1.0.0  (+27 more)
.stack-work/intero/: interoC2yIvb-TEMP.hs
.stack-work/odir/: Main.hi
src/: Main.hs  README.md
