name:                parse-exposition
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SocietyForArtisticResearch/parse-exposition#readme
license:             GPL
license-file:        LICENSE
author:              Luc Döbereiner
maintainer:          luc.doebereiner@researchcatalogue.net
copyright:           2019 Luc Döbereiner
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable parse-exposition
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , bytestring
                     , filepath
                     , directory
                     , conduit
                     , http-conduit
                     , html-conduit
                     , xml-conduit
                     , conduit-extra
                     , aeson
                     , aeson-pretty
                     , containers
                     , blaze-html
                     , pandoc

